web/css/main.css
@font-face {
    font-family: 'SansationRegular';
    src: url('fonts/sansation_regular-webfont.eot');
    src: url('fonts/sansation_regular-webfont.eot?#iefix') format('embedded-opentype'),
        url('fonts/sansation_regular-webfont.woff') format('woff'),
        url('fonts/sansation_regular-webfont.ttf') format('truetype'),
        url('fonts/sansation_regular-webfont.svg#SansationRegular') format('svg');
    font-weight: normal;
    font-style: normal;
    -webkit-font-smoothing: antialiased;
}

body {
    background-color: #eee;
    font-family: 'SansationRegular', sans-serif;
    margin: 0;
    padding: 0;
}

header {
    background-color: gray;
    color: white;
    height: 35px;
    left: 0;
    overflow: hidden;
    position: relative;
    top: 0;
    width: 100%;
    -moz-box-shadow: 1px 0px 1px #999; 
    -webkit-box-shadow: 1px 0px 1px #999;
    box-shadow: 1px 0px 1px #999;
}

header span {
    font-size: large;
    left: 10px;
    position: relative;
    top: 7px;
}
    
header span.info {
    float: right;
    padding: 4px 50px 0 0;
}

header button {
    background-color: #1c94c4;
    border: 0;
    color: white;
    cursor: pointer;
    float: right;
    height: 70%;
    margin: 5px 50px 0 0;
    padding: 0 10px 2px 10px;
    text-align: center;
}

header .date {
    background-color: #cccccc;
    font-size: small;
    height: 100%;
    left: 20px;
    margin: 0;
    padding: 0 10px 2px 10px;
    position: absolute;
    top: 0;
}

#content {
    margin: 3px;
}

footer {
    float: right;
    clear: both;
}

.loader {
    background-color: orange;
    border-radius: 0 0 5px 5px;
    color: white;
    display: none;
    font-weight: bold;
    padding: 5px 15px;
    position: fixed;
    top: 0;
    left: 45%;
    z-index: 9;
}

.column {
    margin: 3px;
    float: left;
    width: 32%;
}

.column .item {
    position: relative;
}

.column .item img {
    cursor: pointer;
    position: relative;
    width: 100%;
    -moz-box-shadow: 1px 1px 5px #999; 
    -webkit-box-shadow: 1px 1px 5px #999;
    box-shadow: 1px 1px 5px #999;
}
.column .item img:hover {
    -moz-box-shadow: 2px 2px 6px #FFFFBC; 
    -webkit-box-shadow: 2px 2px 6px #FFFFBC;
    box-shadow: 2px 2px 6px #FFFFBC;
}

.column .item h2, .column .item h3 {
    background: rgba(0, 0, 0, 0.5);
    bottom: 3px;
    color: #ffffff;
    font-size: large;
    margin: 0;
    padding: 4px 0;
    position: absolute;
    text-align: center;
    visibility: hidden;
    width: 100%;
}
.column .item:hover h2, .column .item:hover h3 {
    visibility: visible;
}

.column .item h3 {
    bottom: auto;
    font-size: medium;
    padding: 4px 5px;
    text-align: center;
    top: 0;
    width: auto;
    z-index: 2;
}

.zoom {
    background: url(transparent.png) 0px 0px;
    display: block;
    height: 100%;
    left: 0;
    margin: 0;
    overflow: auto;
    padding: 0;
    position: absolute;
    top: 0;
    width: 100%;
    z-index: 3;
}

.zoom span.picture {
    display: block;
    text-align: center;
}
.zoom span.picture img {
    cursor: pointer;
    margin: 10px 0 0 10px;
    -moz-box-shadow: 0 0 2px 2px #FFFFBC; 
    -webkit-box-shadow: 0 0 2px 2px #FFFFBC;
    box-shadow: 0 0 2px 2px #FFFFBC;
}

.comment {
    background-color: #FFFFFF;
    float: left;
    font-size: medium;
    margin: 10px 5px 5px 10px;
    overflow: hidden;
    padding: 10px;
    text-align: left;
    width: 240px;
    -moz-box-shadow: 0 0 2px 2px #FFF; 
    -webkit-box-shadow: 0 0 2px 2px #FFF;
    box-shadow: 0 0 2px 2px #FFF;
}

.comment h1 {
    border-bottom: 2px solid grey;
    font-size: large;
    margin: 0;
    width: 100%;
}
.comment h2 {
    font-size: x-small;
    font-weight: normal;
    margin: 0 0 0 -1px;
    padding-bottom: 10px;
    text-align: right;
    width: 100%;
}

.hidden {
    display: none;
}

.comment.form {
    right: 5px;
    position: absolute;
    top: 32px;
}

.form input[type=text] {
    background-color: #eee;
    border: 0;
    font-size: large;
    margin-bottom: 2px;
    width: 100%;
}
.form textarea {
    background-color: #eee;
    border: 0;
    margin-bottom: 15px;
    width: 100%;
}
.form .buttons {
    display: block;
    margin: 0;
    text-align: center;
    width: 100%;
}
.form .buttons button {
    background-color: #1c94c4;
    border: 0;
    border-radius: 5px;
    cursor: pointer;
    color: white;
    display: inline;
    float: none;
    padding: 5px 15px;
}
.form .buttons button.cancel {
    background-color: #cccccc;
}

.virgin {
    color: grey;
    font-style: italic;
}

/* for small screens */
@media (max-width: 519px) {
    .column {
        width: 48%;
    }
    
    header img:first-child {
        padding-top: 9px;
        width: 140px;
    }
    
    header button {
        font-size: x-small;
        margin: 5px 10px 0 0;
    }
    
    header span.info {
        font-size: 7px;
    }
    
    header span {
        font-size: small;
        top: 12px;
    }
    
    .column .item h2, .column .item h3 {
        font-size: small;
    }
}

